--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   },
   "require"    : {
     "php"            : ">=5.4",
-    "symfony/symfony": "~2.3|~3.0",
+    "symfony/symfony": "~2.3|~3.0|~4.0|~5.0",
     "gedmo/doctrine-extensions": "^2.3.3"
   }
 }
